force-app/main/default/objects/Program_Report__c/Program_Report__c.object-meta.xml
<CustomObject>
    <label>Program Report</label>
    <nameField>
        <label>Program Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>