force-app/main/default/objects/Program_Report__c/fields/Average_Minutes_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Minutes_per_Day__c</fullName>
    <formula
  >IF(Total_Days_Reported_Open__c &gt; 0, Total_Daily_Minutes__c / Total_Days_Reported_Open__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Minutes per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>