force-app/main/default/objects/Program_Report__c/fields/Average_Number_of_Boys__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_Boys__c</fullName>
    <formula
  >IF(Total_Days_Reported_Open__c &gt; 0, Total_Number_of_Boys__c / Total_Days_Reported_Open__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Number of Boys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>