force-app/main/default/objects/Program_Report__c/fields/Average_Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_Children__c</fullName>
    <formula
  >IF(Total_Days_Reported_Open__c &gt; 0, (Total_Number_of_Boys__c + Total_Number_of_Girls__c)/ Total_Days_Reported_Club_Activity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total Number of reported Girls &amp; Boys participating in club activity when the club reported activity.</inlineHelpText>
    <label>Average Number of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>