force-app/main/default/objects/Program_Report__c/fields/Days_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Month__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>