force-app/main/default/objects/Program_Report__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula
  >IF(Site__r.FirstPic_National_Org_Code__c != null, Site__r.FirstPic_National_Org_Code__c, Site__r.FirstPic_Org_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>