force-app/main/default/objects/Program_Report__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Program Reports</relationshipLabel>
    <relationshipName>Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>