force-app/main/default/objects/Program_Report__c/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <formula>Grant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Name</label>
    <type>Text</type>
</CustomField>