force-app/main/default/objects/Program_Report__c/fields/Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year__c</fullName>
    <label>Grant Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017 - 2018</fullName>
            </value>
            <value>
                <fullName>2018 - 2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019 - 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>