force-app/main/default/objects/Program_Report__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <formula>Site__r.Local_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>