force-app/main/default/objects/Program_Report__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Reports (Program Coordinator)</relationshipLabel>
    <relationshipName>PC_Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>