force-app/main/default/objects/Program_Report__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Reports</relationshipLabel>
    <relationshipName>Program_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>