force-app/main/default/objects/Program_Report__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <formula>Site__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Id</label>
    <type>Text</type>
</CustomField>