force-app/main/default/objects/Program_Report__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Reports</relationshipLabel>
    <relationshipName>Program_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>