force-app/main/default/objects/Program_Report__c/fields/Total_Daily_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Minutes__c</fullName>
    <label>Total Daily Minutes</label>
    <summarizedField>PA_Log__c.Minutes_of_Activity__c</summarizedField>
    <summaryFilterItems>
        <field>PA_Log__c.Activity_Status__c</field>
        <operation>equals</operation>
        <value>Club Activity, No Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>PA_Log__c.Monthly_PA_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>