force-app/main/default/objects/Program_Report__c/fields/Total_Days_Reported_Club_Activity__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Reported_Club_Activity__c</fullName>
    <inlineHelpText
  >Roll-up summary of days where Activity Status equals Club Activity.</inlineHelpText>
    <label>Total Days Reported Club Activity</label>
    <summaryFilterItems>
        <field>PA_Log__c.Activity_Status__c</field>
        <operation>equals</operation>
        <value>Club Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>PA_Log__c.Monthly_PA_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>