force-app/main/default/objects/Program_Report__c/fields/Total_Days_Reported_Open__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Reported_Open__c</fullName>
    <label>Total Days Reported Open</label>
    <summaryFilterItems>
        <field>PA_Log__c.Activity_Status__c</field>
        <operation>equals</operation>
        <value>Club Activity, No Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>PA_Log__c.Monthly_PA_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>