force-app/main/default/objects/Program_Report__c/fields/Total_Number_of_Girls__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Girls__c</fullName>
    <label>Total Number of Girls</label>
    <summarizedField>PA_Log__c.Number_of_Girls__c</summarizedField>
    <summaryFilterItems>
        <field>PA_Log__c.Activity_Status__c</field>
        <operation>equals</operation>
        <value>Club Activity, No Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>PA_Log__c.Monthly_PA_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>