force-app/main/default/objects/Program_Report__c/recordTypes/Monthly_PA_Logs.recordType-meta.xml
<RecordType>
    <fullName>Monthly_PA_Logs</fullName>
    <active>true</active>
    <label>Monthly PA Logs</label>
</RecordType>