force-app/main/default/objects/Program_Report__c/recordTypes/OVC_Report.recordType-meta.xml
<RecordType>
    <fullName>OVC_Report</fullName>
    <active>true</active>
    <label>OVC Report</label>
</RecordType>