force-app/main/default/objects/Program_Report__c/recordTypes/Youth_Data.recordType-meta.xml
<RecordType>
    <fullName>Youth_Data</fullName>
    <active>true</active>
    <label>Youth Data</label>
</RecordType>