force-app/main/default/objects/Program_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notes_from_National__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>