force-app/main/default/objects/Program_Report__c/listViews/PA_Logs.listView-meta.xml
<ListView>
    <fullName>PA_Logs</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Report__c.Monthly_PA_Logs</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/8/2020 12:00 AM</value>
    </filters>
    <label>PA Logs</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>