force-app/main/default/objects/Program_Report__c/listViews/PA_Logs_2017.listView-meta.xml
<ListView>
    <fullName>PA_Logs_2017</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Report__c.Monthly_PA_Logs</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>PA Logs 2017</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>