force-app/main/default/objects/Program_Report__c/listViews/PA_Logs_2020.listView-meta.xml
<ListView>
    <fullName>PA_Logs_2020</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>CEO_Email__c</columns>
    <columns>Program_Coordinator_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Report__c.Monthly_PA_Logs</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>PA Logs 2020</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>