force-app/main/default/objects/Program_Report__c/listViews/PA_Logs_Sent_Back.listView-meta.xml
<ListView>
    <fullName>PA_Logs_Sent_Back</fullName>
    <columns>NAME</columns>
    <columns>Org_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Report__c.Monthly_PA_Logs</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Revisions Needed</value>
    </filters>
    <label>PA Logs Sent Back</label>
</ListView>