force-app/main/default/objects/Program_Report__c/listViews/Youth_Data.listView-meta.xml
<ListView>
    <fullName>Youth_Data</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Grant_Year__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program_Report__c.Youth_Data</value>
    </filters>
    <label>Youth Data</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>